compiler/testData/diagnostics/testsWithJsStdLib/native/propertyParameter.kt
external class C(x: Int, <!EXTERNAL_CLASS_CONSTRUCTOR_PROPERTY_PARAMETER!>val y: String<!>)